--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tryghost/content-api": "^1.11.20",
     "astro": "^4.6.2",
     "node-fetch": "^3.3.2"
   }
